--- a/konto.html
+++ b/konto.html
@@ -211,38 +211,44 @@ button:hover {
 
     <!-- Formularz dodawania nowego zwierzaka -->
     <form id="add-pet-form">
-      <label for="petName">Imię zwierzaka:</label>
-      <input type="text" id="petName" placeholder="Wpisz imię zwierzaka" required />
+  <label for="petName">Imię zwierzaka:</label>
+  <input type="text" id="petName" placeholder="Wpisz imię zwierzaka" required />
 
-      <label for="petSpecies">Gatunek:</label>
-      <select id="petSpecies" required>
-        <option value="" disabled selected>Wybierz gatunek</option>
-        <option value="Pies">Pies</option>
-        <option value="Kot">Kot</option>
-        <option value="Chomik szczękacz">Chomik szczękacz</option>
-        <option value="Królik ninja">Królik ninja</option>
-        <option value="Papuga rozrabiara">Papuga rozrabiara</option>
-        <option value="Koza skoczek">Koza skoczek</option>
-        <option value="Jeż jeżyk">Jeż jeżyk</option>
-        <option value="Wąż boa">Wąż boa</option>
-        <option value="Krokodyl egipski">Krokodyl egipski</option>
-      </select>
+  <label for="petSpecies">Gatunek:</label>
+  <select id="petSpecies" required>
+    <option value="" disabled selected>Wybierz gatunek</option>
+    <option value="Pies">Pies</option>
+    <option value="Kot">Kot</option>
+    <option value="Papuga">Papuga</option>
+    <option value="Jeż">Jeż</option>
+    <option value="Mysz">Mysz</option>
+    <option value="Królik">Królik</option>
+    <option value="Chomik">Chomik</option>
+    <option value="Świnka morska">Świnka morska</option>
+    <option value="Wąż">Wąż</option>
+  </select>
 
-      <label for="petSize">Rozmiar zwierzaka:</label>
-      <select id="petSize" required>
-        <option value="" disabled selected>Wybierz rozmiar</option>
-        <option value="Mały">Mały</option>
-        <option value="Średni">Średni</option>
-        <option value="Duży">Duży</option>
-      </select>
+  <label for="petBreed">Rasa:</label>
+  <input type="text" id="petBreed" placeholder="Wpisz rasę zwierzaka" required />
 
-      <label for="petAge">Wiek (w latach):</label>
-      <input type="number" id="petAge" min="0" step="1" placeholder="Wpisz wiek" required />
+  <label for="petAge">Wiek (w latach):</label>
+  <input type="number" id="petAge" min="0" step="1" placeholder="Wpisz wiek" required />
 
-      <button type="submit">Dodaj zwierzaka</button>
-      <div id="pet-success" class="success">Zwierzak dodany pomyślnie.</div>
-      <div id="pet-error" class="error">Wystąpił błąd podczas dodawania zwierzaka.</div>
-    </form>
+  <label for="petWeight">Waga (kg):</label>
+  <input type="number" id="petWeight" min="0" step="0.1" placeholder="Wpisz wagę" required />
+
+  <label for="petGender">Płeć:</label>
+  <select id="petGender" required>
+    <option value="" disabled selected>Wybierz płeć</option>
+    <option value="Samiec">Samiec</option>
+    <option value="Samica">Samica</option>
+  </select>
+
+  <button type="submit">Dodaj zwierzaka</button>
+  <div id="pet-success" class="success">Zwierzak dodany pomyślnie.</div>
+  <div id="pet-error" class="error">Wystąpił błąd podczas dodawania zwierzaka.</div>
+</form>
+
   </div>
 
  
